--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ a, a:hover, a:focus {
 /* Center align the text within the four columns for the team*/
 
 .team {
-	margin-top: 100px;
+	/*margin-top: 100px;*/
 }
 .team .col-md-3 {
   margin-bottom: 20px;
