--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,32 @@ a, a:hover, a:focus {
 	display:none;
 }
 
+/*Sponsor Page Styles
+-------------------------------------------------- */
+.sponsor {
+	padding-top: 50px;
+}
+
+.sponsor .btn-lg, .sponsor .btn-default {
+	background: #01426a;
+	margin-bottom: 20px;
+}
+
+.sponsor .btn-default {
+	color: #fff;
+}
+
+
+.sponsor .modal-body{
+	max-height: 800px;
+}
+
+.sponsor .col-md-3 {
+  margin-bottom: 20px;
+  text-align: center;
+}
+
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
