Add sponsor img dimensions to stylesheet
Added sponsor logo image dimensions of 120x120 to stylesheet to avoid repeating those details for each new logo image.

--- a/css/style.css
+++ b/css/style.css
@@ -168,9 +168,13 @@ a, a:hover, a:focus {
 	color: #fff;
 }
 
-
 .sponsor .modal-body{
 	max-height: 800px;
+}
+
+.sponsor img {
+	height: 120px;
+	width: 120px;
 }
 
 .sponsor .col-md-3 {
