--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,10 @@ a, a:hover, a:focus {
 	width: 120px;
 }
 
+.sponsor h2 {
+	font-size: 20px;
+}
+
 .sponsor .col-md-3 {
   margin-bottom: 20px;
   text-align: center;
