--- a/css/style.css
+++ b/css/style.css
@@ -114,10 +114,9 @@ ul.nav {
   border-color: transparent;
 }
 
-a, a:hover, a:focus {
-  color: #6eceb2;
-}
-a.inline-link {
+p > a {
+  color: #01426a;
+  font-style: italic;
   font-weight: 800;
 }
 
@@ -172,6 +171,7 @@ html {
   background: #01426a;
 }
 .footer * > a {
+  color: #6eceb2;
   font-size: 10px;
 }
 .footer * >.fa {
