--- a/css/clubs.css
+++ b/css/clubs.css
@@ -1,5 +1,9 @@
+.club{
+  margin-top:20px;
+}
 .club-logo {
-  height: 40px;
+  width:100%;
+  max-width:70px;
 }
 .club-heading {
   margin-top: 0px;
@@ -8,4 +12,13 @@
   color: #6eceb2;
   margin-top: 0px;
 }
-
+.btn-apply {
+  float:right;
+  width:40px;
+  height:40px; 
+  border-radius:0 0 0 0;
+  background:#ece81a;
+  color:white;
+  font-size:20px;
+  font-weight:bold;
+}
