--- a/css/clubs.css
+++ b/css/clubs.css
@@ -22,3 +22,23 @@
   font-size:20px;
   font-weight:bold;
 }
+.project {
+  margin-top: 30px;
+}
+.project-club-logo {
+  float: right;
+  width: 60px;
+}
+.project-img {
+  width: 100%;
+  height: 300px;
+  background-size: cover;
+  opacity: .5;
+  transition: opacity .25s ease-in-out;
+  -moz-transition: opacity .25s ease-in-out;
+  -webkit-transition: opacity .25s ease-in-out;
+}
+
+.project-img:hover {
+  opacity: 1;
+}
