Adds minimum height for the iframe

--- a/css/style.css
+++ b/css/style.css
@@ -274,3 +274,7 @@ html {
 	  display: inline;
   }
 }
+/* fix of iframe height for wufoo forms on Firefox, which defaults to height of 0 */
+#wufooFormm162h8u80qnh6ng, #wufoomobbd7d0s4mjkm {
+  min-height: 2000px;  
+}
